# pancake

Act/HelloWorld/: HelloWorld.h
Act/ageForDrink/: CMakeLists.txt  ageForDrink.cpp  ageForDrink.h
Act/plusOuMoins_COOLGAME/: CMakeLists.txt  plusOuMoins_COOLGAME.cpp  plusOuMoins_COOLGAME.h
demo/Function/: CMakeLists.txt  Function.cpp  Function.h  README.md  somePersonalFunction.cpp  somePersonalFunction.h
demo/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
