# CMakeList.txt : projet CMake pour ageForDrink, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("ageForDrink")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (ageForDrink "ageForDrink.cpp" "ageForDrink.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
