# CMakeList.txt : projet CMake pour plusOuMoins_COOLGAME, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("plusOuMoins_COOLGAME")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (plusOuMoins_COOLGAME "plusOuMoins_COOLGAME.cpp" "plusOuMoins_COOLGAME.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
